--- a/1.2 Plotting - Timeseries.ipynb
+++ b/1.2 Plotting - Timeseries.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align='center'>Berkeley Earth</h1>"
+    "<h1 align='center'>Bokeh tutorial</h1>"
    ]
   },
   {
@@ -230,11 +230,6 @@
    "source": [
     "**Exercise: Add a crosshair and hover tool to the plot**"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
