--- a/1.7 Animate - optional.ipynb
+++ b/1.7 Animate - optional.ipynb
@@ -18,42 +18,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.6 Layout"
+    "## 1.7 Animate (optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise: Wrap your visualizations in functions**\n",
+    "**Exercise: Add a title plot for the app with month and year that gets updated with the plot animation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import numpy as np\n",
+    "import netCDF4\n",
     "\n",
-    "Wrap each of the previous visualizations in a function in a python file (e.g. ``viz.py``):\n",
+    "from bokeh.plotting import vplot, hplot, cursession, output_server, show\n",
     "\n",
-    "- Climate + Map: climate_map()\n",
-    "- Legend: legend()\n",
-    "- Timeseries: timeseries()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Import the functions from your file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Create your plots with your new functions"
+    "from viz import climate_map, timeseries, legend, get_slice  "
    ]
   },
   {
@@ -64,7 +53,44 @@
    },
    "outputs": [],
    "source": [
-    "# Test the visualizations in the notebook"
+    "# Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Output option"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from bokeh.plotting import figure\n",
+    "\n",
+    "# Data \n",
+    "\n",
+    "# New text Plot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Plots\n"
    ]
   },
   {
@@ -75,7 +101,18 @@
    },
    "outputs": [],
    "source": [
-    "from bokeh.plotting import show, output_notebook"
+    "# Create layout\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Show\n"
    ]
   },
   {
@@ -86,87 +123,26 @@
    },
    "outputs": [],
    "source": [
-    "# Show climate map"
+    "# Select data source for climate_map and month and year\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Show legend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Show timeseries"
+    "# Modify the previous loop: updates the image, month and year data sources\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise: Layout your plots using hplot and vplot**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.plotting import vplot, hplot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Create your layout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Show layout"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise: Store your layout in an html page**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.plotting import output_file"
+    "**Exercise: Modify your `viz.py file` to include the new title plot**"
    ]
   }
  ],
