--- a/1.1 Charts - Timeseries.ipynb
+++ b/1.1 Charts - Timeseries.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align='center'>Berkeley Earth</h1>"
+    "<h1 align='center'>Bokeh Tutorial</h1>"
    ]
   },
   {
