--- a/1.7 Animate - optional 2.ipynb
+++ b/1.7 Animate - optional 2.ipynb
@@ -18,42 +18,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.6 Layout"
+    "## 1.7 Animate (optional 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise: Wrap your visualizations in functions**\n",
+    "**Exercise: Animate the timeseries plot**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import datetime\n",
     "\n",
-    "Wrap each of the previous visualizations in a function in a python file (e.g. ``viz.py``):\n",
+    "import numpy as np\n",
+    "import netCDF4\n",
+    "import pandas as pd\n",
     "\n",
-    "- Climate + Map: climate_map()\n",
-    "- Legend: legend()\n",
-    "- Timeseries: timeseries()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Import the functions from your file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Create your plots with your new functions"
+    "from bokeh.plotting import vplot, hplot, cursession, output_server, show\n",
+    "\n",
+    "from viz import climate_map, timeseries, legend, get_slice  "
    ]
   },
   {
@@ -64,18 +56,7 @@
    },
    "outputs": [],
    "source": [
-    "# Test the visualizations in the notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.plotting import show, output_notebook"
+    "# Data"
    ]
   },
   {
@@ -86,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "# Show climate map"
+    "# Output option"
    ]
   },
   {
@@ -97,7 +78,13 @@
    },
    "outputs": [],
    "source": [
-    "# Show legend"
+    "from bokeh.plotting import figure\n",
+    "\n",
+    "# Data \n",
+    "\n",
+    "# Data for timeseries\n",
+    "\n",
+    "# New text Plot"
    ]
   },
   {
@@ -108,36 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "# Show timeseries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise: Layout your plots using hplot and vplot**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.plotting import vplot, hplot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Create your layout"
+    "# Plots"
    ]
   },
   {
@@ -148,14 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "# Show layout"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise: Store your layout in an html page**"
+    "# New circle in timeseries plot"
    ]
   },
   {
@@ -166,7 +117,43 @@
    },
    "outputs": [],
    "source": [
-    "from bokeh.plotting import output_file"
+    "# Create layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Select data source for climate_map and month and year\n",
+    "\n",
+    "# Select data source for timeseries data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Modify the previous loop: updates the image, timeseries, month and year data sources"
    ]
   }
  ],
