--- a/1.2 Plotting - Timeseries.ipynb
+++ b/1.2 Plotting - Timeseries.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "Tips:\n",
     "\n",
-    "    bokeh.models.DateTimeTickFormatter()\n",
+    "    bokeh.models.DatetimeTickFormatter()\n",
     "\n",
     "Note: You can create a new figure to see observe the differences."
    ]
